# prime-gen

./: .gitignore  README.md
prime-gen-client/: CMakeLists.txt
prime-gen-client/comm/: request.h
prime-gen-client/include/: calculator.h  client.h  ui.h
prime-gen-client/src/: calculator.c  client.c  main.c  ui.c
prime-gen-server/: CMakeLists.txt
prime-gen-server/comm/: reply.h
prime-gen-server/include/: client.h  scheduler.h  server.h
prime-gen-server/src/: client.c  main.c  scheduler.c  server.c
